--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,91 @@
 body {
     font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
+
+
 }
 
+header {
+    background-image:url("/img/karma-logo.svg");
+    background-repeat: no-repeat;
+    height: 80px;
+    
+}
+nav {
+    text-align: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+nav p {
+    float: right;
+}
+
+main{
+    background-image: url("/img/first-background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 8in;
+    
+}
+
+main h1 {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: lighter;
+    font-size: 120px;
+    color: lavenderblush;
+    margin: 80px;
+    padding-top: 300px;
+}
+main p {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 50px;
+    font-weight: lighter;
+    color: lavenderblush;
+}
+main button {
+    background-color: rgb(247, 55, 7);
+    text-align: center;
+    padding: 30px;
+    margin-left: 1300px;
+    font-size: 25px;
+
+}
+
+div {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    font-size: 40px;
+    font-weight: lighter;
+}
+ h2 {
+    font-size: 60px;
+    font-weight: lighter;
+    text-align: center;
+    
+}
+#img1 {
+    margin-right: 270px;
+}
+#img2 {
+    margin-right: 270px;
+}
+
+
+div p {
+    float:left;
+}
+#p1{
+    margin-left: 600px;
+    margin-right:200px;
+}
+#p2 {
+    margin-right: 200px;
+    margin-left: 50px;
+}
 /**
  * Add your custom styles below
  * 
